# PhoneVR

./: .cirrus.yml  .clang-format  .editorconfig  .gitignore  .gitmodules  Makefile  README.md  appveyor.yml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: issue-bug-report-template.md  issue-bug-report-template.yml  issue-template.md
.github/workflows/: build.yml  release.yml  stale.yml
3rd party libraries/: libraries.md  readme.md
3rd party licenses/: libav.LGPLv2.1.txt  nlohmann-json.txt
3rd party licenses/tools/: 7za.txt
app/: PhoneVR.apk
code/: .gitignore  update-builds.bat
code/common/libs/ifaddrs/: ifaddrs.c  ifaddrs.h  pvr_google_ifaddrs.h
code/common/src/: PVRGlobals.cpp  PVRGlobals.h  PVRSocketUtils.cpp  PVRSocketUtils.h  version.info
code/common/src/Utils/: StrUtils.h  ThreadUtils.h  Watch.h
code/legacy/: PVRDesktopDupl.cpp  PVRGraphics.cpp  PVRSocketsUtils - UDPTalker.cpp  PVRSocketsUtils - UDPTalker.h  PVRStreamReceiver.cpp  PVRStreamReceiver.h  PVRStreamer.cpp  PVRStreamer.h  Packet.cpp  PixelShader.hlsl  build-libav-android.sh  build-libav-ios.sh  build-x264-win.sh  del-desktop-ini.bat  ffmpeg windows compilation notes.txt  gl shaders.txt  install-PhoneVR 310117.bat  shaders..cpp  update-ffmpeg-dev.bat
code/mobile/android/: opencv.sh  opencv.txt
code/mobile/android/FeatureDetectionTest/: build.gradle  import-summary.txt
code/mobile/android/PhoneVR/: .gitignore  build-pr.gradle  build.gradle  gradle.properties  keystore.properties  prepare-alvr-deps.sh  version.properties  versioning.gradle
code/mobile/android/PhoneVR old/: build.gradle
code/mobile/android/PhoneVR old/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
code/mobile/android/PhoneVR old/app/src/main/: AndroidManifest.xml
code/mobile/android/PhoneVR old/app/src/main/cpp/: native-wrap.cpp
code/mobile/android/PhoneVR old/app/src/main/cpp/src/: native-wrap.cpp
code/mobile/android/PhoneVR old/app/src/main/java/com/rz/phonevr/: GameActivity.kt  JavaWrap.kt  MainActivity2.kt  SettingsActivity.kt
code/mobile/android/PhoneVR old/app/src/main/res/layout/: activity_main.xml  activity_settings.xml  content_main.xml
code/mobile/android/PhoneVR old/app/src/main/res/values/: colors.xml  styles.xml
code/mobile/android/PhoneVR/app/: CMakeCache.txt  CMakeLists.txt  PhoneVRKeyStore.jks  PhoneVRKeyStorePR.jks  RohitKeyStore.jks  build-pr.gradle  build.gradle  google-services.json
code/mobile/android/PhoneVR/app/src/androidTest/java/viritualisres/phonevr/: ALVRActivityTest.kt  AppPackageTest.kt  ExampleInstrumentedTest.kt  InitActivityTest.kt  MainActivityTest.kt  SettingsActivityTest.kt
code/mobile/android/PhoneVR/app/src/androidTest/java/viritualisres/phonevr/utils/: PVRInstrumentationBase.kt  pvr-adb-telnet.sh
code/mobile/android/PhoneVR/app/src/androidTestGvr/java/viritualisres/phonevr/: MainActivityTest.kt  SettingsActivityTest.kt
code/mobile/android/PhoneVR/app/src/gvr/: AndroidManifest.xml  CMakeLists.txt
code/mobile/android/PhoneVR/app/src/gvr/cpp/: common.h  native-lib.cpp
code/mobile/android/PhoneVR/app/src/gvr/java/viritualisres/phonevr/: Globals.kt  MainActivity.kt  SettingsActivity.kt
code/mobile/android/PhoneVR/app/src/gvr/res/layout/: activity_game.xml  activity_init.xml  activity_main.xml  activity_settings.xml
code/mobile/android/PhoneVR/app/src/gvr/res/values/: strings.xml  styles.xml
code/mobile/android/PhoneVR/app/src/main/: AndroidManifest.xml
code/mobile/android/PhoneVR/app/src/main/cpp/: NativeErrorHandler.cpp  NativeErrorHandler.h  alvr_main.cpp  common.h  native-lib.cpp  nativeCrashHandler.cpp  nativeCrashHandler.h  passthrough.cpp  passthrough.h  pvr_alvr.h  utils.h
code/mobile/android/PhoneVR/app/src/main/java/viritualisres/phonevr/: ALVRActivity.java  BatteryLevelListener.java  DiscordReportSender.java  DiscordReportSenderFactory.java  ErrorReporting.java  ErrorReportingDialog.java  GameActivity.kt  Globals.kt  GraphAdapter.java  InitActivity.kt  MainActivity.kt  Passthrough.java  PassthroughSettingsActivity.java  SettingsActivity.kt  Wrap.kt
code/mobile/android/PhoneVR/app/src/main/res/layout/: activity_init.xml  activity_init_nogvr.xml  activity_main.xml  activity_passthrough_settings.xml  activity_settings.xml  chart_layout.xml  content_main.xml
code/mobile/android/PhoneVR/app/src/main/res/menu/: main.xml  settings_menu.xml
code/mobile/android/PhoneVR/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_alvr.xml
code/mobile/android/PhoneVR/app/src/main/res/values/: ic_launcher_alvr_background.xml  strings.xml  styles.xml
code/mobile/android/PhoneVR/app/src/main/res/xml/: passthrough_settings.xml
code/mobile/android/PhoneVR/app/src/noGvr/: AndroidManifest.xml
code/mobile/android/PhoneVR/app/src/noGvr/java/viritualisres/phonevr/: InitActivity.kt  MainActivity.kt
code/mobile/android/PhoneVR/app/src/noGvr/res/drawable-v21/: rippleable.xml
code/mobile/android/PhoneVR/app/src/noGvr/res/layout/: activity_init.xml
code/mobile/android/PhoneVR/app/src/noGvr/res/values/: strings.xml  vr_shim.xml
code/mobile/android/PhoneVR/app/src/test/java/viritualisres/phonevr/: ExampleUnitTest.kt
code/mobile/android/SpaceWarpTest/: build.gradle
code/mobile/ios/PhoneVR/: Podfile
code/mobile/mobile-common/: PVRRenderer.cpp  PVRRenderer.h  PVRSockets.cpp  PVRSockets.h
code/mobile/mobile-common/Utils/: RenderUtils.cpp  RenderUtils.h  Watch.cpp  Watch.h
code/windows/PhoneVR/: AMP Crashes WorkArround.txt  PhoneVR.sln  post_build_debug.cmd  post_build_release.cmd
code/windows/PhoneVR/PhoneVR/: Makefile  PVRFileManager.cpp  PVRFileManager.h  PVRGraphics.cpp  PVRGraphics.h  PVRMath.cpp  PVRMath.h  PVRSockets.cpp  PVRSockets.h  PVRffmpeg.cpp  PVRffmpeg.h  PVRffmpegBackgroundProcess.cpp  PVRffmpegBackgroundProcess.h  PhoneVR.vcxproj  PhoneVR.vcxproj.filters  driver.cpp  linux.h  openvr_driver.h  post_build.cmd  resource.h  resource.rc
driver/: copy-to-vrsettings.txt  install-PhoneVR.bat  kill-steam.bat  uninstall-PhoneVR.bat
driver/PVRServer/: pvrsettings.json
driver/PVRServer/logs/: pvrlog.txt
(+41 files in other folders)
